--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-paper": "^5.14.5"
+    "react-native-paper": "^5.14.5",
+    "react-native-webview": "13.15.0"
   },
   "private": true
 }
